##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = OCSPdash
version = 0.1.0-dev
url = https://github.com/scolby33/OCSPdash
download_url = https://github.com/scolby33/OCSPdash/releases
author = Scott Colby
author_email = scolby33@gmail.com
maintainer = scolby33@gmail.com
maintainer_email = scolby33@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
license = MIT
description = A dashboard for the status of the top certificate authorities' OCSP responders.
long_description = file: README.rst
keywords =

#[metadata.project_urls]
#Documentation =

[options]
install_requires =
    argon2-cffi
    asn1crypto
    censys
    click
    cryptography
    distlib
    docopt
    flasgger
    flask
    flask-admin
    flask-bootstrap
    flask-sqlalchemy
    jsonlines
    ocspbuilder
    oscrypto
    passlib
    python-jose
    requests
    sqlalchemy
    tqdm
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    ocspdash = ocspdash.cli:main
    ocspscrape = ocspdash.ocspscrape:main

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
# I use f-strings. Upgrade yo' Python!
# TODO change this appropriately for 3.7
python-tag = py36


#############################
# Bumpversion Configuration #
# (.bumpversion)            #
#############################
[bumpversion]
current_version = 0.1.0-dev
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+(?P<build>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?
serialize =
	{major}.{minor}.{patch}-{release}+{build}
	{major}.{minor}.{patch}+{build}
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = production
first_value = dev
values =
	dev
	production

[bumpverion:part:build]
values = [0-9A-Za-z-]+

[bumpversion:file:src/ocspdash/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:src/ocspdash/constants.py]
search = VERSION = '{current_version}'
replace = VERSION = '{new_version}'


##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = ocspdash

[coverage:paths]
source =
    src/ocspdash
    .tox/*/lib/python*/site-packages/ocspdash

[coverage:report]
show_missing = True
